v0.0.2 - MC 1.21.5 Update and Code Improvements
See 'Change Log.md' in docs directory